[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://ganha.tscn" type="PackedScene" id=2]
[ext_resource path="res://Material freeway/wallpaperfreeway.png" type="Texture" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://Material freeway/sons/ponto.wav" type="AudioStream" id=5]
[ext_resource path="res://Material freeway/sons/ganhou.wav" type="AudioStream" id=6]
[ext_resource path="res://Material freeway/sons/tema.wav" type="AudioStream" id=7]
[ext_resource path="res://Material freeway/PressStart2P-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 8 )

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="ganha" parent="." instance=ExtResource( 2 )]
position = Vector2( 638.66, 64 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 696 )

[node name="horacarrorapido" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="horacarrodevagar" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="placar1" type="Label" parent="."]
margin_left = 620.0
margin_top = 10.0
margin_right = 640.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0470588, 0.945098, 1, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resultado" type="Label" parent="."]
margin_top = 10.0
margin_right = 1280.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.937255, 1, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ponto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ganhou" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="tema" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -18.0

[node name="Button" type="Button" parent="."]
margin_left = 496.0
margin_top = 320.0
margin_right = 796.0
margin_bottom = 400.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.180392, 0, 1, 1 )
custom_colors/font_color = Color( 0, 0.827451, 1, 1 )
custom_colors/font_color_hover = Color( 0.184314, 0.705882, 0.490196, 1 )
custom_colors/font_color_pressed = Color( 0, 0.968627, 1, 1 )
text = "Reiniciar"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pontua" from="Player" to="." method="_on_Player_pontua"]
[connection signal="timeout" from="horacarrorapido" to="." method="_on_horacarrorapido_timeout"]
[connection signal="timeout" from="horacarrodevagar" to="." method="_on_horacarrodevagar_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
